_includes/manuals/1.6/4.1.1_authentication.md

Foreman natively supports LDAP authentication using one or multiple LDAP directories.

#### Setting up

Go to *Administer > LDAP Authentication*, click on *New LDAP Source* and enter the following details about the LDAP server:

* *Name*: an arbitrary name for the directory
* *Server*: the LDAP hostname, e.g. `ldap.example.com`
* *LDAPS*: check this if you want or need to use LDAPS to access the directory
* *Port*: the LDAP port (default is 389, or 636 for LDAPS)
* *Server type*: select the implementation if listed, else choose POSIX

Under the account tab, the details of an account used to read LDAP entries is required if anonymous binds and reads are disabled.  This should be a dedicated service account with bind, read and search permissions on the user and group entries in the directory server.

This may use the variable `$login` which will be replaced by the login of the authenticating user, however this is deprecated and will result in reduced functionality (as it only works at authentication time).

* *Account*: leave this field empty if your LDAP server can be read anonymously, otherwise enter a user name that has read access
* *Account password*: password for the account, if defined above and when not using $login
* *Base DN*: the top level DN of your LDAP directory tree, e.g. `dc=example,dc=com`
* *Group base DN*: the top level DN of your LDAP directory tree that contains groups, e.g. `ou=Groups,dc=example,dc=com`
* *LDAP filter* (optional): a filter to restrict your LDAP queries, for instance: ```(memberOf=cn=foreman-users,ou=Groups,dc=example,dc=com)```. Multiple filters can be combined using the syntax ```(& (filter1) (filter2))```.

#### On the fly user creation

By checking *Automatically create accounts in Foreman*, any LDAP user will have their Foreman account automatically created the first time they log into Foreman.

To use this feature, the relevant LDAP attributes must be specified on the next tab (e.g. firstname, lastname, email), as these will be used to populate the Foreman account.

#### Attribute mappings

Foreman needs to know how to map internal user account attributes to their LDAP counterparts, such as login, name, and e-mail. Examples for common directory servers are provided below.

Note that LDAP attribute names are *case sensitive*.

Foreman also has the ability to use a user's photo stored in LDAP as their Foreman avatar, by setting the jpegPhoto attribute mapping.

Additional Information:

* [Adding Display Pictures/Avatars to Red Hat IDM/FreeIPA](https://www.dalemacartney.com/2013/12/05/adding-display-picturesavatars-red-hat-idmfreeipa/)
* [Using the jpegPhoto attribute in Active Directory](https://docs.microsoft.com/en-us/archive/blogs/btrst4/using-the-jpegphoto-attribute-in-ad-part-i)

#### Examples

All of the examples below use a dedicated service account called 'foreman'.  This should be set up with bind, read and search permissions on the user and group entries and with a strong, random password.

##### Active Directory

Typically either LDAPS on port 636 or LDAP on port 389.

<div>
  <table class="table table-bordered table-condensed">
    <thead>
      <tr>
        <th>Setting</th>
        <th>Value</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Account</td>
        <td>DOMAIN\foreman</td>
      </tr>
      <tr>
        <td>Base DN</td>
        <td>CN=Users,DC=example,DC=COM</td>
      </tr>
      <tr>
        <td>Groups base DN</td>
        <td>CN=Users,DC=example,DC=com</td>
      </tr>
      <tr>
        <td>Login name attribute</td>
        <td>sAMAccountName</td>
      </tr>
      <tr>
        <td>First name attribute</td>
        <td>givenName</td>
      </tr>
      <tr>
        <td>Surname attribute</td>
        <td>sn</td>
      </tr>
      <tr>
        <td>Email address attribute</td>
        <td>mail</td>
      </tr>
    </tbody>
  </table>
</div>

##### FreeIPA

Typically either LDAPS on port 636 or LDAP on port 389.

<div>
  <table class="table table-bordered table-condensed">
    <thead>
      <tr>
        <th>Setting</th>
        <th>Value</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Account</td>
        <td>uid=foreman,cn=users,cn=accounts,dc=example,dc=com</td>
      </tr>
      <tr>
        <td>Base DN</td>
        <td>cn=users,cn=accounts,dc=example,dc=com</td>
      </tr>
      <tr>
        <td>Groups base DN</td>
        <td>cn=groups,cn=accounts,dc=example,dc=com</td>
      </tr>
      <tr>
        <td>Login name attribute</td>
        <td>uid</td>
      </tr>
      <tr>
        <td>First name attribute</td>
        <td>givenName</td>
      </tr>
      <tr>
        <td>Surname attribute</td>
        <td>sn</td>
      </tr>
      <tr>
        <td>Email address attribute</td>
        <td>mail</td>
      </tr>
    </tbody>
  </table>
</div>

##### OpenLDAP

Typically LDAP on port 389 and with anonymous queries (leave Account blank), unless configured otherwise.

<div>
  <table class="table table-bordered table-condensed">
    <thead>
      <tr>
        <th>Setting</th>
        <th>Value</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Account</td>
        <td>uid=foreman,dc=example,dc=com</td>
      </tr>
      <tr>
        <td>Base DN</td>
        <td>dc=example,dc=com</td>
      </tr>
      <tr>
        <td>Groups base DN</td>
        <td>dc=example,dc=com</td>
      </tr>
      <tr>
        <td>Login name attribute</td>
        <td>uid</td>
      </tr>
      <tr>
        <td>First name attribute</td>
        <td>givenName</td>
      </tr>
      <tr>
        <td>Surname attribute</td>
        <td>sn</td>
      </tr>
      <tr>
        <td>Email address attribute</td>
        <td>mail</td>
      </tr>
    </tbody>
  </table>
</div>

#### Linking user groups to LDAP

A Foreman user group can be associated to a group stored in an LDAP server, so membership of the LDAP group automatically adds a user to the Foreman user group.  User groups can be associated with roles, enabling users to log into Foreman and be automatically granted permissions via their membership of an LDAP group.  Read more about permissions in the [Roles and Permissions](/manuals/{{page.version}}/index.html#4.1.2RolesandPermissions) section.

To configure the association, create or edit a user group via *Administer > User groups*.  The group name may be any value (no direct relation to the LDAP group).  Under the *Roles* tab, select roles granting permissions to Foreman, or tick the *Admin* checkbox to enable administrator level access.

On the *External groups* tab, click the *Add external user group* button to open a new form.  In the *Name* field, enter the exact name of the LDAP group (usually the common name/CN) and select the server from the dropdown list of LDAP authentication sources.  Click the *Submit* button to save changes.

When a user logs in for the first time (assuming on the fly account creation), the ldap:refresh_usergroups cronjob runs (every 30 minutes by default) or the *Refresh* button is pressed next to the external user group entry, Foreman will synchronize the group membership from LDAP.

##### Security Disclaimer

Please remember your external user groups will only be refreshed automatically through the ldap:refresh_usergroups cronjob. There can be a lapse of time cronjob runs, in which if the user groups in LDAP change, the user will be assigned to the wrong external user groups. This situation can be quickly fixed by manually running ```foreman-rake ldap:external_usergroups``` or by refreshing the external user groups in the UI. Otherwise, the problem will eventually get fixed when the cronjob runs again.

#### Troubleshooting

If you want to use on the fly user creation, make sure that Foreman can fetch from your LDAP all the required information to create a valid user.
For example, on-the-fly user creation won't work if you don't have valid email addresses in your directory (you will get an 'Invalid username/password' error message when trying to log in).
